<resources>
    <string name="app_name">MyLoginApp</string>
    <string name="enter_your_email">Enter your username</string>
    <string name="hello">WELCOME \nBACK</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="button">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
</resources>